src/main/java/com/example/r6siegestats/r6sstatsapi/external/objects/error/UbiApiException.java
package com.example.r6siegestats.r6sstatsapi.external.objects.error;

public class UbiApiException extends Exception {

    public UbiApiException(String message) {
        super(message);
    }


    @Override
    public String getMessage() {
        return super.getMessage();
    }

}
